--- a/template/index.html
+++ b/template/index.html
@@ -29,7 +29,7 @@
 											<h2>Please indicate if you need any Accessability Features.</h2>
 										</header>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">I need Accessability Features.</a></li>
+											<a class="button"><font color = "white">I need Accessability Features.</font></a>
 										</ul>
 									</div>
 								</div>
