--- a/site/assets/css/main.css
+++ b/site/assets/css/main.css
@@ -3067,8 +3067,9 @@ input, select, textarea {
 		#main button,
 		#main .button {
 			background-color: purple;
-			box-shadow: inset 0 0 0 1px #dddddd;
-			color: purple !important;
+			color: white !important;
+			box-shadow: none;
+			font-weight: bold;
 		}
 
 
@@ -3078,7 +3079,10 @@ input, select, textarea {
 			#main input[type="button"].icon:before,
 			#main button.icon:before,
 			#main .button.icon:before {
-				color: rgba(99, 99, 99, 0.25);
+				background-color: purple;
+				color: white !important;
+				box-shadow: none;
+				font-weight: bold;
 			}
 
 			#main input[type="submit"].primary,
@@ -3086,9 +3090,10 @@ input, select, textarea {
 			#main input[type="button"].primary,
 			#main button.primary,
 			#main .button.primary {
-				background-color: #8cc9f0;
-				color: #ffffff !important;
+				background-color: purple;
+				color: white !important;
 				box-shadow: none;
+				font-weight: bold;
 			}
 
 				#main input[type="submit"].primary:hover,
@@ -3096,7 +3101,10 @@ input, select, textarea {
 				#main input[type="button"].primary:hover,
 				#main button.primary:hover,
 				#main .button.primary:hover {
-					background-color: #9acff2;
+					background-color: purple;
+					color: white !important;
+					box-shadow: none;
+					font-weight: bold;
 				}
 
 				#main input[type="submit"].primary:active,
@@ -3112,7 +3120,10 @@ input, select, textarea {
 				#main input[type="button"].primary.icon:before,
 				#main button.primary.icon:before,
 				#main .button.primary.icon:before {
-					color: #ffffff !important;
+					background-color: purple;
+					color: white !important;
+					box-shadow: none;
+					font-weight: bold;
 				}
 
 		#main label {
