--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Test</title>
-</head>
-<body>
-<h1>
-    This is the test!
-</h1>
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Flask Tutorial</title>
+  </head>
+  <body>
+    {% extends "template.html" %}
+    {% block content %}
+
+    <h1> My First Try Using Flask </h1>
+    <p> Flask is Fun </p>
+
+    {% endblock %}
+  </body>
 </html>
