--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="{{ url_for('static',    filename='css/main.css') }}" /></noscript>
 	</head>
 	<body class="is-preload">
 			<div id="wrapper">
@@ -29,13 +29,13 @@
             </div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			 <script src="{{ url_for('static',    filename='scripts/jquery.min.js') }}"></script>
+            <script src="{{ url_for('static',    filename='scripts/jquery.scrollex.min.js') }}"></script>
+            <script src="{{ url_for('static',    filename='scripts/jquery.scrolly.min.js') }}"></script>
+            <script src="{{ url_for('static',    filename='scripts/browser.min.js') }}"></script>
+            <script src="{{ url_for('static',    filename='scripts/breakpoints.min.js') }}"></script>
+            <script src="{{ url_for('static',    filename='scripts/util.js') }}"></script>
+            <script src="{{ url_for('static',    filename='scripts/main.js') }}"></script>
 
 	</body>
 </html>
