--- a/templates/choice.html
+++ b/templates/choice.html
@@ -1,3 +1,5 @@
+
+{% extends "template.html" %}
 <!DOCTYPE HTML>
 <html>
 	<head>
@@ -11,11 +13,7 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
-				<!-- Header -->
-					<header id="header" class="alt">
-						<img src="images/logo.jpeg" alt="" />
-					</header>
+                {% block content %}
 
 				<!-- Main -->
 					<div id="main">
@@ -26,14 +24,15 @@
 											<h2><b>Do you require any Accessability Features?</b></h2>
 										</header>
 										<ul class="actions">
-											<li><a href="{{ url }}" class="buttonyes"><i class="fas fa-thumbs-up" style="color:white;"></i></a></li>
+											<li><a href="{{ url_for('yes') }}" class="buttonyes"><i class="fas fa-thumbs-up" style="color:white;"></i></a></li>
 										</ul>
                     <ul class="actions">
-                      <li><a href="level.html" class="buttonno"><i class="fas fa-thumbs-down" style="color:white;"></i></a></li>
+                      <li><a href="{{ url_for('levels') }}" class="buttonno"><i class="fas fa-thumbs-down" style="color:white;"></i></a></li>
                     </ul>
 									</div>
 								</div>
 							</section>
+                {% endblock %}
 
 
 		<!-- Scripts -->
