--- a/templates/levels.html
+++ b/templates/levels.html
@@ -1,3 +1,4 @@
+{% extends "template.html" %}
 <!DOCTYPE HTML>
 <html>
 	<head>
@@ -9,10 +10,10 @@
 	</head>
 	<body class="is-preload">
 
+
 			<div id="wrapper">
-					<header id="header" class="alt">
-						<img src="images/logo.jpeg" alt="" />
-					</header>
+                {% block content %}
+
 					<div id="main">
 							<section id="intro" class="main">
 								<div class="spotlight">
@@ -35,6 +36,9 @@
 									</div>
 								</div>
 							</section>
+                        {% endblock content %}
+                    </div>
+            </div>
 
 
 		<!-- Scripts -->
