--- a/static/css/main.css
+++ b/static/css/main.css
@@ -192,17 +192,19 @@ ol, ul {
 
 /* Button */
 	.button {
+		background-color: purple;
+		color: white;
 		border-radius: 8px;
 		border: 0;
 		cursor: pointer;
 		display: inline-block;
-		font-weight: 300;
+		font-weight: bold;
 		height: 2.75em;
 		line-height: 2.75em;
 		min-width: 9.25em;
 		padding: 0 1.5em;
 		text-align: center;
-		text-decoration: bold;
+		text-decoration: none;
 		white-space: nowrap;
 	}
 	.buttonyes {
