--- a/site/assets/css/main.css
+++ b/site/assets/css/main.css
@@ -1376,18 +1376,20 @@ body.is-preload #header.alt .logo {
 	z-index: 1;
 	top: 0;
 	left: 0;
-	background-color: #111;
+	text: white;
 	overflow-x: hidden;
 	transition: 0.5s;
 	padding-top: 60px;
 	text-align:center;
+	background-color: purple;
+	opacity: 0.9;
 }
 
 .sidenav a {
 	padding: 8px 8px 8px 32px;
 	text-decoration: none;
 	font-size: 25px;
-	color: #818181;
+	color: white;
 	display: block;
 	transition: 0.3s;
 
