Further PythonFlask Commit , with linked pages , qr code working

--- a/templates/exhibit.html
+++ b/templates/exhibit.html
@@ -14,7 +14,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
                 {% block content %}
-
+                <p id="disabilities"></p>
 				<!-- Main -->
 					<div id="main">
 							<section id="intro" class="main">
