--- a/templates/exhibit.html
+++ b/templates/exhibit.html
@@ -21,10 +21,10 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2><b>{{ exhibit_name }}</b></h2> <!-- CHANGE THIS-->
+											<h2><b id="name">{{ exhibit_name }}</b></h2> <!-- CHANGE THIS-->
 										</header>
           						<img src="images/demo.jpeg" alt="" /> <!-- CHANGE THIS-->
-										<p>{{ exhibit_description }}</p>
+										<p id="description">{{ exhibit_description }}</p>
                   <h2><b>FURTHER</b></h2>
                   <p><a href = "https://www.sciencealert.com/13-science-facts-never-learned-high-school-2018"> LINKS </a></p>  <!-- CHANGE THIS-->
                     <img src="images/demo.jpeg" alt="" /> <!-- CHANGE THIS-->
