--- a/templates/QR.html
+++ b/templates/QR.html
@@ -12,17 +12,14 @@
   <body>
     <header id="header" class="alt">
       <img src="images/logo.jpeg" alt="" />
-    </header>
-
-      <h1><center>Please scan the QR code.</center></h1>
+    </header>S
+      <h1><center>Please scan the QR code</center></h1>
 
       <video id="preview"></video>
       <script type="text/javascript">
         let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
         scanner.addListener('scan', function (content) {
-          var test = JSON.parse(content);
-          window.location.href = '/exhibit?id=' + test['id'];
-
+          alert(content);
         });
         Instascan.Camera.getCameras().then(function (cameras) {
           if (cameras.length > 0) {
