--- a/templates/help.html
+++ b/templates/help.html
@@ -21,6 +21,7 @@ h2{
   width: 280px;
   font-weight:bold;
   font-size: 16px;
+  margin: auto;
 }
 body {
   background-color: purple;
@@ -34,6 +35,8 @@ body {
   right: 15px;
   border: 3px solid #f1f1f1;
   z-index: 9;
+  margin: auto;
+  
 }
 
 /* Add styles to the form container */
@@ -104,11 +107,9 @@ body {
 function openForm() {
   document.getElementById("myForm").style.display = "block";
 }
-
 function closeForm() {
   document.getElementById("myForm").style.display = "none";
 }
-
 function sendMail() {
     var link = "mailto:me@example.com"
              + "?cc=myCCaddress@example.com"
