--- a/templates/help.html
+++ b/templates/help.html
@@ -36,7 +36,7 @@ body {
   border: 3px solid #f1f1f1;
   z-index: 9;
   margin: auto;
-  
+
 }
 
 /* Add styles to the form container */
@@ -98,7 +98,7 @@ body {
     <label for="msg"><b><font style="size:30px">Message</font></b></label>
     <textarea id = "msg" placeholder="Type message.." name="msg" required></textarea>
 
-    <button type="submit" class="btn" onclick="sendMail()" method="post">Send</button>
+    <button type="submit" class="btn" onclick="sendMail()" href=helpsent.html method="post">Send</button>
     <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
   </form>
 </div>
