--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 											<h2><b>Let's get started!</b></h2>
 										</header>
 										<ul class="actions">
-											<li><a href="{{ url_for('choice') }}" class="button">Continue</a></li>
+											<li><a href="{{ url_for('choice') }}" class="button">Get Started!</a></li>
 										</ul>
 									</div>
 								</div>
