reverted to old email thing

--- a/templates/help.html
+++ b/templates/help.html
@@ -98,7 +98,7 @@ body {
     <label for="msg"><b><font style="size:30px">Message</font></b></label>
     <textarea id = "msg" placeholder="Type message.." name="msg" required></textarea>
 
-    <button type="submit" class="btn" onclick="sendMail()" href=helpsent.html method="post">Send</button>
+    <button type="submit" class="btn" onclick="sendMail()" method="post">Send</button>
     <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
   </form>
 </div>
