--- a/templates/qr.html
+++ b/templates/qr.html
@@ -19,7 +19,8 @@
       <script type="text/javascript">
         let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
         scanner.addListener('scan', function (content) {
-          alert(content);
+          var test = JSON.parse(content);
+          window.location.href = '/exhibit?id=' + test['id'];
         });
         Instascan.Camera.getCameras().then(function (cameras) {
           if (cameras.length > 0) {
